some working code and new data-json

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Characters List</title>
 </head>
 <body>
-    Hello, I am Body!
+    <div id="main-container">
+        <div class="app-characters-list app-characters-list_style"
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/dataCharacters.json">
+        </div>
+        <div class="app-characters-list app-characters-list_style"
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/dataCharacters.json">
+        </div>
+    </div>
 </body>
 </html>
