working library (some css)

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,24 @@
 <body>
     <div id="main-container">
         <div class="app-characters-list app-characters-list_style"
-             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/dataCharacters.json">
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/data.actors.json"
+             data-grouping-template="firstName">
         </div>
         <div class="app-characters-list app-characters-list_style"
-             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/dataCharacters.json">
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/data.characters.json"
+             data-grouping-template="secondName">
+        </div>
+        <div class="app-characters-list app-characters-list_style"
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/data.actors.json"
+             data-grouping-template="secondName">
+        </div>
+        <div class="app-characters-list app-characters-list_style"
+             data-src="https://raw.githubusercontent.com/lacera/tensor_test/master/src/data.characters.json"
+             data-grouping-template="firstName">
+        </div>
+        <div class="app-characters-list app-characters-list_style"
+             data-src="{}"
+             data-grouping-template="">
         </div>
     </div>
 </body>
