--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
              data-grouping-template="firstName">
         </div>
         <div class="app-characters-list app-characters-list_style"
-             data-src="{}"
+             data-src=""
              data-grouping-template="">
         </div>
     </div>
